SAK-10119 http://bugs.sakaiproject.org/jira/browse/SAK-10119 Buttons on Gradebook Item Summary screen are not labeled or aligned as specified in documentation - Align with right side of table
git-svn-id: https://source.sakaiproject.org/svn/gradebook/trunk@31199 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/gradebook/app/ui/src/webapp/css/gradebook.css
+++ b/gradebook/app/ui/src/webapp/css/gradebook.css
@@ -149,8 +149,6 @@ td.gbMessageAboveNumber {vertical-align:top; text-align:right; padding-right:2em
 }
 
 .gbButtonBar {
-	float: right;
 	text-align: right;
-	margin-right: 1.0em;
 }
 
